Added id generation to reduce id size